Update CMakeLists.txt minimum required
Fix remaining errors reported by the compiler